--- a/server/info/templates/info/contacts.html
+++ b/server/info/templates/info/contacts.html
@@ -7,7 +7,7 @@
 
 {% block css %}
     {{ block.super }}
-    <link rel="stylesheet" href="{% static 'main/css/contacts.css' %}">
+    <link rel="stylesheet" href="{% static 'info/css/contacts.css' %}">
 {% endblock %}
 
 
