--- a/server/products/templates/products/index.html
+++ b/server/products/templates/products/index.html
@@ -11,7 +11,7 @@
     </div>
     <div class="content_right_product">
         <a href="{% url 'karkasson' %}" class="product_unit product_unit_new">
-            <img src="{% static 'main/img/karkasson.jpg' %}" alt="Каркассон">
+            <img src="{% static 'products/img/karkasson.jpg' %}" alt="Каркассон">
             <div class="product_unit_name">
                 Каркассон
             </div>
@@ -20,7 +20,7 @@
             </div>
         </a>
         <a href="{% url 'karkasson' %}" class="product_unit product_unit_hot">
-            <img src="{% static 'main/img/karkasson.jpg' %}" alt="Каркассон">
+            <img src="{% static 'products/img/karkasson.jpg' %}" alt="Каркассон">
             <div class="product_unit_name">
                 Каркассон
             </div>
@@ -30,7 +30,7 @@
             </div>
         </a>
         <a href="{% url 'machi_koro' %}" class="product_unit">
-            <img src="{% static 'main/img/machi-koro.jpg' %}" alt="Мачи-Коро">
+            <img src="{% static 'products/img/machi-koro.jpg' %}" alt="Мачи-Коро">
             <div class="product_unit_name">
                 Каркассон
             </div>
@@ -39,7 +39,7 @@
             </div>
         </a>
         <a href="{% url 'machi_koro' %}" class="product_unit">
-            <img src="{% static 'main/img/machi-koro.jpg' %}" alt="Мачи-Коро">
+            <img src="{% static 'products/img/machi-koro.jpg' %}" alt="Мачи-Коро">
             <div class="product_unit_name">
                 Каркассон
             </div>
@@ -48,7 +48,7 @@
             </div>
         </a>
         <a href="{% url 'manchkin' %}" class="product_unit">
-            <img src="{% static 'main/img/manchkin.jpg' %}" alt="Манчкин">
+            <img src="{% static 'products/img/manchkin.jpg' %}" alt="Манчкин">
             <div class="product_unit_name">
                 Каркассон
             </div>
@@ -57,7 +57,7 @@
             </div>
         </a>
         <a href="{% url 'manchkin' %}" class="product_unit">
-            <img src="{% static 'main/img/manchkin.jpg' %}" alt="Манчкин">
+            <img src="{% static 'products/img/manchkin.jpg' %}" alt="Манчкин">
             <div class="product_unit_name">
                 Каркассон
             </div>
