--- a/server/products/templates/products/manchkin.html
+++ b/server/products/templates/products/manchkin.html
@@ -7,7 +7,7 @@
 
 {% block css %}
     {{ block.super }}
-    <link rel="stylesheet" href="{% static 'main/css/product.css' %}">
+    <link rel="stylesheet" href="{% static 'products/css/product.css' %}">
 {% endblock %}
 
 
@@ -17,8 +17,8 @@
     </div>
 
     <div class="product_img_and_short_descroption">
-        <a href="{% static 'main/img/manchkin.jpg' %}" target="_blank">
-            <img src="{% static 'main/img/manchkin.jpg' %}" alt="Манчкин" class="game_image">
+        <a href="{% static 'products/img/manchkin.jpg' %}" target="_blank">
+            <img src="{% static 'products/img/manchkin.jpg' %}" alt="Манчкин" class="game_image">
         </a>
         <div class="product_short_description_wrap">
             <h2 class="product_header">Описание товара</h2>
