--- a/server/products/templates/products/machi-koro.html
+++ b/server/products/templates/products/machi-koro.html
@@ -7,7 +7,7 @@
 
 {% block css %}
     {{ block.super }}
-    <link rel="stylesheet" href="{% static 'main/css/product.css' %}">
+    <link rel="stylesheet" href="{% static 'products/css/product.css' %}">
 {% endblock %}
 
 
@@ -16,8 +16,8 @@
         Мачи Коро
     </div>
     <div class="product_img_and_short_descroption">
-        <a href="{% static 'main/img/machi-koro.jpg' %}" target="_blank">
-            <img src="{% static 'main/img/machi-koro.jpg' %}" alt="Мачи Коро" class="game_image">
+        <a href="{% static 'products/img/machi-koro.jpg' %}" target="_blank">
+            <img src="{% static 'products/img/machi-koro.jpg' %}" alt="Мачи Коро" class="game_image">
         </a>
         <div class="product_short_description_wrap">
             <h2 class="product_header">Описание товара</h2>
