--- a/server/products/templates/products/index.html
+++ b/server/products/templates/products/index.html
@@ -9,7 +9,7 @@
         {% for product in products %}
             {% for _ in ''|rjust:2 %}
                 <a href="{% url product.url %}" class="product_unit">
-                    <img src="{{ product.image_url }}" alt={{ product.name }}>
+                    <img src="{% static product.image_url %}" alt={{ product.name }}>
                     <div class="product_unit_name">
                         {{ product.name }}
                     </div>
