--- a/server/products/templates/products/index.html
+++ b/server/products/templates/products/index.html
@@ -8,7 +8,7 @@
     <div class="content_right_product">
         {% for product in products %}
             {% for _ in ''|rjust:2 %}
-                <a href="{% url product.url %}" class="product_unit">
+                <a href="{{ product.url }}" class="product_unit">
                     <img src="{% static product.image_url %}" alt={{ product.name }}>
                     <div class="product_unit_name">
                         {{ product.name }}
