--- a/server/products/templates/products/index.html
+++ b/server/products/templates/products/index.html
@@ -8,13 +8,19 @@
     <div class="content_right_product">
         {% for product in products %}
             {% for _ in ''|rjust:2 %}
-                <a href="{{ product.url }}" class="product_unit">
+                <a href="{% url product.url %}"
+                   class="product_unit
+                          {% if product.status == 'new' %}product_unit_new{% endif %}
+                          {% if product.status == 'hot' %}product_unit_hot{% endif %}">
                     <img src="{% static product.image_url %}" alt={{ product.name }}>
                     <div class="product_unit_name">
                         {{ product.name }}
                     </div>
                     <div class="product_unit_price_wrap">
-                        <div class="product_unit_price_actual"> {{ product.price }} ₽</div>
+                        <div class="product_unit_price_actual">{{ product.price_now }} ₽</div>
+                        {% if product.status == 'sale' %}
+                            <div class="product_unit_price_old"> {{ product.price_old }} ₽</div>
+                        {% endif %}
                     </div>
                 </a>
             {% endfor %}
