--- a/server/products/templates/products/detail.html
+++ b/server/products/templates/products/detail.html
@@ -6,8 +6,8 @@
         {{ product.name }}
     </div>
     <div class="product_img_and_short_descroption">
-        <a href="{% static product.image_url %}" target="_blank">
-            <img src="{% static product.image_url %}" alt={{ product.name }} class="game_image">
+        <a href="{{ product.image.url }}" target="_blank">
+            <img src="{{ product.image.url }}" alt={{ product.name }} class="game_image">
         </a>
         <div class="product_short_description_wrap">
             <h2 class="product_header">Описание товара</h2>
@@ -20,9 +20,10 @@
 
     <h2 class="product_header">Характеристики товара</h2>
     <ul class="product_features">
-        {% for itm in product.specifications %}
-            <li>{{ itm }}</li>
-        {% endfor %}
+{#        {% for itm in product.specifications %}#}
+{#            <li>{{ itm }}</li>#}
+{#        {% endfor %}#}
+        {{ product.specifications }}
     </ul>
 
     <h2 class="product_header">Подробное описание товара</h2>
