--- a/server/products/templates/products/index.html
+++ b/server/products/templates/products/index.html
@@ -8,7 +8,7 @@
     <div class="content_right_product">
         {% for _ in ''|rjust:2 %}
             {% for product in products %}
-                <a href="{% url 'products:detail' pk=forloop.counter0 %}"
+                <a href="{% url 'products:detail' pk=product.id %}"
                    class="product_unit
                           {% if product.status == 'new' %}product_unit_new{% endif %}
                           {% if product.status == 'hot' %}product_unit_hot{% endif %}">
