--- a/server/main/templates/main/index.html
+++ b/server/main/templates/main/index.html
@@ -6,23 +6,10 @@
         Наши новинки
     </div>
     <div class="content_right_product">
-        {% for _ in ''|rjust:6 %}
+        {% for _ in ''|rjust:3 %}
             {% for product in products %}
                 {% if product.status == 'new' %}
-                    <a href="{% url 'products:detail' pk=product.id %}" class="product_unit product_unit_new">
-                        {% if product.image %}
-                            <img src="{{ product.image.url }}" alt={{ product.name }}>
-                        {% else %}
-                            <img src="{% static 'products/img/default.png' %}" alt={{ product.name }}>
-                        {% endif %}
-                        <div class="product_unit_name">
-                            {{ product.name }}
-                        </div>
-                        <div class="product_unit_price_wrap">
-                            <div class="product_unit_price_actual">
-                                {{ product.price_now }} ₽</div>
-                        </div>
-                    </a>
+                    {% include 'server/includes/inc_product.html' with id=product.id status=product.status image=product.image name=product.name price_now=product.price_now price_old=product.price_old %}
                 {% endif %}
             {% endfor %}
         {% endfor %}
@@ -35,19 +22,7 @@
         {% for _ in ''|rjust:3 %}
             {% for product in products %}
                 {% if product.status == 'hot' %}
-                    <a href="{% url 'products:detail' pk=product.id %}" class="product_unit product_unit_hot">
-                        {% if product.image %}
-                            <img src="{{ product.image.url }}" alt={{ product.name }}>
-                        {% else %}
-                            <img src="{% static 'products/img/default.png' %}" alt={{ product.name }}>
-                        {% endif %}
-                        <div class="product_unit_name">
-                            {{ product.name }}
-                        </div>
-                        <div class="product_unit_price_wrap">
-                            <div class="product_unit_price_actual">{{ product.price_now }} ₽</div>
-                        </div>
-                    </a>
+                    {% include 'server/includes/inc_product.html' with id=product.id status=product.status image=product.image name=product.name price_now=product.price_now price_old=product.price_old %}
                 {% endif %}
             {% endfor %}
         {% endfor %}
@@ -61,20 +36,7 @@
         {% for _ in ''|rjust:3 %}
             {% for product in products %}
                 {% if product.status == 'sale' %}
-                    <a href="{% url 'products:detail' pk=product.id %}" class="product_unit">
-                        {% if product.image %}
-                            <img src="{{ product.image.url }}" alt={{ product.name }}>
-                        {% else %}
-                            <img src="{% static 'products/img/default.png' %}" alt={{ product.name }}>
-                        {% endif %}
-                        <div class="product_unit_name">
-                            {{ product.name }}
-                        </div>
-                        <div class="product_unit_price_wrap">
-                            <div class="product_unit_price_actual">{{ product.price_now }} ₽</div>
-                            <div class="product_unit_price_old">{{ product.price_old }} ₽</div>
-                        </div>
-                    </a>
+                    {% include 'server/includes/inc_product.html' with id=product.id status=product.status image=product.image name=product.name price_now=product.price_now price_old=product.price_old %}
                 {% endif %}
             {% endfor %}
         {% endfor %}
