--- a/server/products/templates/categories/create.html
+++ b/server/products/templates/categories/create.html
@@ -5,28 +5,5 @@
     <div class="content_right_header">
         Новая категория
     </div>
-    <form method="post">
-        {% for err in form.non_field_errors %}
-            <div class="alert alert-danger">
-                <span>{{ err }}</span>
-            </div>
-        {% endfor %}
-
-        {% csrf_token %}
-        {% for field in form %}
-            <div class="create_form">
-                <label for="{{ field.name }}">
-                    {{ field.label }}
-                </label>
-                {{ field }}
-
-                {% for err in field.errors %}
-                    <small class="field_error">
-                        {{ err }}
-                    </small>
-                {% endfor %}
-            </div>
-        {% endfor %}
-        <input type="submit">
-    </form>
+    {% include 'server/includes/inc_form.html' with form=form %}
 {% endblock %}
