files=request.FILES

--- a/server/server/templates/server/includes/inc_form.html
+++ b/server/server/templates/server/includes/inc_form.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 
-<form method="post">
+<form method="POST" enctype="multipart/form-data">
     {% for err in form.non_field_errors %}
         <div class="alert alert-danger">
             <span>{{ err }}</span>
