--- a/server/server/templates/server/base.html
+++ b/server/server/templates/server/base.html
@@ -17,6 +17,7 @@
                   integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
                   crossorigin="anonymous">
                 <link rel="stylesheet" href="{% static 'server/css/base.css' %}">
+                <link rel="stylesheet" href="{% static 'server/css/menu.css' %}">
 
                 {% for link in link_list %}
                     {% if link != '' %}
