--- a/server/server/templates/server/includes/inc_main_menu.html
+++ b/server/server/templates/server/includes/inc_main_menu.html
@@ -4,11 +4,13 @@
         <li><a href="{% url 'main:main' %}">Главная</a></li>
         <li><a href="{% url 'products:main' %}">Каталог</a>
             <ul>
-                {% for itm in menu %}
-                    <li><a href="{% url 'categories:detail' pk=itm.id %}">{{ itm.name }}</a>
+                {% for itm_c in menu_categories %}
+                    <li><a href="{% url 'categories:detail' pk=itm_c.id %}">{{ itm_c.name }}</a>
                         <ul>
-                            {% for itm_1 in menu %}
-                                <li><a href="{% url 'products:detail' pk=itm_1.id %}">{{ itm_1.name }}</a></li>
+                            {% for itm_p in menu_products %}
+                                {% if itm_p.category_id == itm_c.id %}
+                                    <li><a href="{% url 'products:detail' pk=itm_p.id %}">{{ itm_p.name }}</a></li>
+                                {% endif %}
                             {% endfor %}
                         </ul>
                     </li>
