--- a/server/products/templates/products/detail.html
+++ b/server/products/templates/products/detail.html
@@ -7,7 +7,11 @@
     </div>
     <div class="product_img_and_short_description">
         <a href="{{ product.image.url }}" target="_blank">
-            <img src="{{ product.image.url }}" alt={{ product.name }} class="game_image">
+            {% if product.image %}
+                <img src="{{ product.image.url }}" alt={{ product.name }} class="game_image">
+            {% else %}
+                <img src="{% static 'products/img/default.png' %}" alt={{ product.name }} class="game_image">
+            {% endif %}
         </a>
         <div class="product_short_description_wrap">
             <h2 class="product_header">Описание товара</h2>
